@@ -91,10 +91,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>
-                        @{argLine}
-                        --add-reads io.github.sekelenao.flinkboot.fluss=com.fasterxml.jackson.dataformat.yaml
-                    </argLine>
+                    <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
         </plugins>
